...
            "value": "Bildanpassungen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Image adjustments"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Ajustes de imagen"
...
            "value": "Helligkeit"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Brightness"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Brillo"
...
            "value": "Schließen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Cerrar"
...
            "value": "Menü"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Menu"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Menú"
...
            "value": "Seiten"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Pages"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Páginas"
...
